client-ns2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-allow
  namespace: ns2
  labels:
    app: curl-client
    netpol: client-allow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl-client
      netpol: client-allow
  template:
    metadata:
      labels:
        app: curl-client
        netpol: client-allow
    spec:
      containers:
      - name: curl
        image: curlimages/curl:latest
        command:
          - "sh"
          - "-c"
          - >
            while true; do
              sleep 3600;
            done
