statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: client-allow
  labels:
    app: curl-client
    netpol: client-allow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl-client
  template:
    metadata:
      labels:
        app: curl-client
        netpol: client-allow
    spec:
      containers:
      - name: curl
        image: curlimages/curl:latest
        command:
          - "sh"
          - "-c"
          - >
            while true; do
              sleep 3600;
            done
