hostname.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hostname-server
  labels:
    app: hostname-server
spec:
  selector:
    matchLabels:
      app: hostname-server
  template:
    metadata:
      labels:
        app: hostname-server
    spec:
      containers:
      - name: hostname-server
        image: gcr.io/kubernetes-e2e-test-images/agnhost:2.8
        args: ["porter"]
        livenessProbe:
          httpGet:
            port: live-port
          initialDelaySeconds: 15
          periodSeconds: 15
        readinessProbe:
          httpGet:
            port: ready-port
          periodSeconds: 60
        ports:
          - name: serve-8080
            containerPort: 8080
          - name: live-port
            containerPort: 31337
          - name: ready-port
            containerPort: 41173
---
apiVersion: v1
kind: Service
metadata:
  name: hostname
spec:
  type: NodePort
  ipFamilyPolicy: PreferDualStack
  internalTrafficPolicy: Local
  selector:
    app: hostname-server
  ports:
    - name: serve-8080
      protocol: TCP
      nodePort: 30808
      port: 80
      targetPort: 8080
    - name: ready-port
      protocol: TCP
      port: 41173
      targetPort: 41173
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-headless
spec:
  clusterIP: None
  selector:
    app: hostname-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
