ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostname-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hostname
            port:
              number: 80
      - path: /health
        pathType: Exact
        backend:
          service:
            name: hostname
            port:
              number: 41173
