cilium-no-dns-proxy-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-no-dns-proxy
spec:
  endpointSelector:
    matchLabels:
      netpol: client-allow
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: node-local-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - cluster
    - toFQDNs:
        - matchName: "cilium.io"
        - matchPattern: "*.google.com"
        - matchPattern: "*.wikipedia.org"
        - matchPattern: "*.*.svc.cluster.local"
      toPorts:
        - ports:
          - port: "443"
            protocol: TCP
          - port: "80"
            protocol: TCP
          rules:
            http:
            - method: "GET"
              path: "/"
