netpol-hostname2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hostname2-allow-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hostname-server-2container
  ingress:
  - from:
    - podSelector: {}
      namespaceSelector: {}
  policyTypes:
  - Ingress
